Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.5(EOL), 10.6(EOL), 10.11, 11.4
-
Can result in unexpected behaviour
-
ALTER TABLE could fail to update InnoDB persistent statistics.
Description
The test case for the following change in MySQL 8.0.37 suggests that MariaDB is affected by the same:
Bug#35127747 The n_rows value becomes 0 when repeated altering with algorithm=copy within 10 seconds
That is, for ALTER TABLE...ALGORITHM=COPY the InnoDB statistics will not be updated. This is similar to MDEV-28327, which affected INSERT. Note: I did not test with the MDEV-33087 setting innodb_alter_copy_bulk=ON.
Attachments
Issue Links
- causes
-
MDEV-38667 Assertion in diagnostics area on DDL stats timeout
-
- Closed
-
-
MDEV-38882 Assertion in diagnostics area on DDL stats (MDEV-38667 not fully fixed)
-
- Closed
-
- relates to
-
MDEV-28327 InnoDB persistent statistics fail to update after bulk insert
-
- Closed
-
-
MDEV-33087 ALTER TABLE...ALGORITHM=COPY should build indexes more efficiently
-
- Closed
-
-
MDEV-34672 Merge applicable InnoDB changes from MySQL 8.0.38 and 8.0.39
-
- Closed
-